--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.12.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-onclickoutside": "^6.7.1",
     "react-scripts": "1.1.0"
   },
   "scripts": {
